# claude_learning

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.claude/skill-tests/: test-example.yaml  test-greet.yaml
.claude/skill-tests/results/: 2026-04-06-2230.md
.claude/skill-tests/snapshots/: greet-default.md
.claude/skills/greet/: SKILL.md
.claude/skills/write-report/: SKILL.md
.github/workflows/: collect.yml
config/: sources.yaml
data/2026-04-06/: index.md
data/2026-04-06/AI/: raw.json  summary.md
data/2026-04-06/Business/: raw.json  summary.md
data/2026-04-06/Claude/: raw.json  summary.md
data/2026-04-06/General/: raw.json  summary.md
data/2026-04-06/Tech/: raw.json  summary.md
data/2026-04-06/Tools/: raw.json  summary.md
data/2026-04-06/best-practices/: raw.json  summary.md
data/2026-04-06/claude-code/: raw.json  summary.md
data/2026-04-06/features/: raw.json  summary.md
data/2026-04-06/productivity/: raw.json  summary.md
data/2026-04-06/prompt-engineering/: raw.json  summary.md
data/2026-04-06/report-writing/: methodology.md  prompt-template.md  raw.json
data/2026-04-06/skill-development/: design-process.md  methodology.md  raw.json  summary.md
docs/: claude_tutorial.md
src/: config.py  main.py
src/classification/: classifier.py
src/collectors/: api.py  base.py  rss.py  web.py
src/output/: index.py  writer.py
src/processing/: filter.py  normalizer.py  summarizer.py
src/sync/: git_sync.py
src/utils/: dedup.py  logger.py
